# src/docs/swagger.json
@@ -10,6 +10,37 @@
     },
     "basePath": "/",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "アプリケーションのログイン",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "ログインAPI",
+                "parameters": [
+                    {
+                        "description": "サインアップ",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.UserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.LonginResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/signin": {
             "post": {
                 "description": "ユーザー新規登録",
@@ -19,14 +50,8 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "ユーザー新規登録",
+                "summary": "ユーザー新規登録API",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path"
-                    },
                     {
                         "description": "サインアップ",
                         "name": "body",
@@ -48,6 +73,17 @@
         }
     },
     "definitions": {
+        "user.LonginResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "user.UserRequest": {
             "type": "object",
             "properties": {
